--- a/yiiplus/frontend/web/css/site.css
+++ b/yiiplus/frontend/web/css/site.css
@@ -16,19 +16,26 @@ body {
 
 .footer {
     height: 60px;
-    background-color: #f5f5f5;
+    background-color: #333c36;
     border-top: 1px solid #ddd;
     padding-top: 20px;
+    color: white;
 }
 
 .jumbotron {
     text-align: center;
     background-color: transparent;
+    padding-bottom: 100%;
 }
 
 .jumbotron .btn {
     font-size: 21px;
     padding: 14px 24px;
+    border-radius: 0px;
+}
+
+.btn {
+     border-radius: 0px;
 }
 
 .not-set {
@@ -102,4 +109,91 @@ a.desc:after {
 
 .nav > li > form > button:hover {
     text-decoration: none;
+}
+.navbar {
+    background-color: #333c36;
+    height: 60px;
+}
+
+.breadcrumb {
+    background-color: #e3e4db;
+}
+
+.active > li {
+    background-color: white;
+}
+ /*
+.btn-danger {
+    background-color: #93ACB5;
+    outline-color: #789099;
+    outline-width: 2px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(78, 90, 99, .15), 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 0 rgba(78, 90, 99, .15), 0 1px 1px rgba(0, 0, 0, .075);
+
+} */
+
+.btn-danger.active{
+    background-color: #333c36;
+}
+
+.subhead {
+    padding-bottom: 100px;
+    padding-top: -100px;
+
+}
+
+#poop {
+    padding-bottom: 30px;
+    margin-top: -100px;
+    color:white;
+}
+
+#sciencebg {
+    background-image: url("https://images.unsplash.com/uploads/14114005966624c90b007/60cc31c4?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=ccd60e2befc85b88cae88af2a1355ff7"); 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    min-height: 100%;
+    min-width: 1024px;
+    position: fixed;
+    top:0;
+    left: 0;
+
+}
+
+.transparent {
+    background:rgba(255,255,255,0.5);
+}
+
+#logo {
+    margin-top: -18px ;
+
+}
+/* deafault bootstrap */
+.btn-primary {
+  color: #fff;
+  background-color: #333c36;
+  border-color: #2b332d;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: #434941;
+    border-color: #2b332d;
+}
+.btn-primary:active, .btn-primary.active {
+    background: #66756b;
+    box-shadow: none;
+    border-color: #2b332d;
+}
+
+h4 {
+    font-family: helvetica;
+    font-weight: 100;
+    line-height: 200%;
 }
