--- a/yiiplus/frontend/web/css/site.css
+++ b/yiiplus/frontend/web/css/site.css
@@ -197,3 +197,37 @@ h4 {
     font-weight: 100;
     line-height: 200%;
 }
+
+.project {
+    height: 200px;
+    width: 300px;
+    background-color: #e3e4db;
+    padding:10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 0px;
+    position: relative;
+}
+
+.project .title {
+    font-family: helvetica;
+    font-weight: 600;
+    font-size: 17;
+    margin-bottom: 5px;
+}
+
+.project .description {
+    font-family: helvetica;
+    font-weight: 100;
+}
+
+.project .owner {
+    font-weight: 500;
+    font-size: 12px;
+    position: absolute;
+    bottom: 10px;
+}
+.proj-btn {
+   margin: 5px;
+}
