Commented and cleaned the code

--- a/yiiplus/frontend/web/css/site.css
+++ b/yiiplus/frontend/web/css/site.css
@@ -232,3 +232,15 @@ h4 {
    margin-top: -32px;
 }
 
+.name-display {
+    font-size: 30px;
+}
+
+.description-display {
+    font-size: 18px;
+    font-weight: 200;
+}
+
+
+
+
